# ObjectTracking_OpenCV

./: CMakeLists.txt  README.md  camShiftTracker.cpp  coloredObjectTracker.cpp  farnebackTracker.cpp  goodFeaturesToTrack.cpp  harrisCornersTracker.cpp  lucasKanadeTracker.cpp
